test/syntax/12-num-err.c
// ======================================================================

/* num -> NUM
        | OCTNUM
        | HEXNUM
        | CHARCONST */

// ======================================================================

void main(void)
{
  int i;

  i = 01118;	// error: not octal number
}

// ======================================================================
